--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -205,6 +205,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -311,9 +336,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,16 +354,19 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="82a68110cda14de6a47418489137ce17-629e615cf62945d69b56061ba4e50245" name="82a68110cda14de6a47418489137ce17" class="tab" checked=""><label for="82a68110cda14de6a47418489137ce17-629e615cf62945d69b56061ba4e50245">General</label>
-<input type="radio" id="82a68110cda14de6a47418489137ce17-1b977ff11edf4dc9b0432a81a35f1da0" name="82a68110cda14de6a47418489137ce17" class="tab"><label for="82a68110cda14de6a47418489137ce17-1b977ff11edf4dc9b0432a81a35f1da0">Startup</label>
-<input type="radio" id="82a68110cda14de6a47418489137ce17-db5cbc85c47b4fc987068f4df055b2c2" name="82a68110cda14de6a47418489137ce17" class="tab"><label for="82a68110cda14de6a47418489137ce17-db5cbc85c47b4fc987068f4df055b2c2">Android</label>
-<input type="radio" id="82a68110cda14de6a47418489137ce17-08d35510ad464b9aa6d780e267eb962f" name="82a68110cda14de6a47418489137ce17" class="tab"><label for="82a68110cda14de6a47418489137ce17-08d35510ad464b9aa6d780e267eb962f">iOS</label>
-<input type="radio" id="82a68110cda14de6a47418489137ce17-5c5fafa810234450bfa41f298989bb5b" name="82a68110cda14de6a47418489137ce17" class="tab"><label for="82a68110cda14de6a47418489137ce17-5c5fafa810234450bfa41f298989bb5b">Windows</label>
+<input type="radio" id="451b823f3f88448598f7855d07f119dc-408881eabfbd43559d1a470fe041fce9" name="451b823f3f88448598f7855d07f119dc" class="tab" checked=""><label for="451b823f3f88448598f7855d07f119dc-408881eabfbd43559d1a470fe041fce9">General</label>
+<input type="radio" id="451b823f3f88448598f7855d07f119dc-7d5d7bccde2c4901a76006e6dd0184ce" name="451b823f3f88448598f7855d07f119dc" class="tab"><label for="451b823f3f88448598f7855d07f119dc-7d5d7bccde2c4901a76006e6dd0184ce">Startup</label>
+<input type="radio" id="451b823f3f88448598f7855d07f119dc-06f8973f26ce42298e4544bd4320b40e" name="451b823f3f88448598f7855d07f119dc" class="tab"><label for="451b823f3f88448598f7855d07f119dc-06f8973f26ce42298e4544bd4320b40e">Android</label>
+<input type="radio" id="451b823f3f88448598f7855d07f119dc-a9d64c20661545e785bbabd86d7a3178" name="451b823f3f88448598f7855d07f119dc" class="tab"><label for="451b823f3f88448598f7855d07f119dc-a9d64c20661545e785bbabd86d7a3178">iOS</label>
+<input type="radio" id="451b823f3f88448598f7855d07f119dc-59f21ba9e5ef4be7906a419cfa2679a8" name="451b823f3f88448598f7855d07f119dc" class="tab"><label for="451b823f3f88448598f7855d07f119dc-59f21ba9e5ef4be7906a419cfa2679a8">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
