--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,14 +356,17 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="8f882fceb97d441fafc1a9b344c036fd-b56408b96fdb4d0f92bd1d29ab3e01e2" name="8f882fceb97d441fafc1a9b344c036fd" class="tab" checked><label for="8f882fceb97d441fafc1a9b344c036fd-b56408b96fdb4d0f92bd1d29ab3e01e2" >General</label>
-<input type="radio" id="8f882fceb97d441fafc1a9b344c036fd-52070b73286f4fabb2e57dd1aafd1885" name="8f882fceb97d441fafc1a9b344c036fd" class="tab" ><label for="8f882fceb97d441fafc1a9b344c036fd-52070b73286f4fabb2e57dd1aafd1885" >Startup</label>
-<input type="radio" id="8f882fceb97d441fafc1a9b344c036fd-7bca43532aef40a2b34f468971dd632e" name="8f882fceb97d441fafc1a9b344c036fd" class="tab" ><label for="8f882fceb97d441fafc1a9b344c036fd-7bca43532aef40a2b34f468971dd632e" >Android</label>
-<input type="radio" id="8f882fceb97d441fafc1a9b344c036fd-14a5a21a3d2a4f9bb6ef4f104bb83533" name="8f882fceb97d441fafc1a9b344c036fd" class="tab" ><label for="8f882fceb97d441fafc1a9b344c036fd-14a5a21a3d2a4f9bb6ef4f104bb83533" >iOS</label>
+<input type="radio" id="3a219545a5324478998bbf8192844630-2e664862ad86459abe2a36621cce713c" name="3a219545a5324478998bbf8192844630" class="tab" checked><label for="3a219545a5324478998bbf8192844630-2e664862ad86459abe2a36621cce713c" >General</label>
+<input type="radio" id="3a219545a5324478998bbf8192844630-3db5c0765dbc40518834126583eedf0b" name="3a219545a5324478998bbf8192844630" class="tab" ><label for="3a219545a5324478998bbf8192844630-3db5c0765dbc40518834126583eedf0b" >Startup</label>
+<input type="radio" id="3a219545a5324478998bbf8192844630-f01c6b9200a04cf6ad1d5bf595246fd1" name="3a219545a5324478998bbf8192844630" class="tab" ><label for="3a219545a5324478998bbf8192844630-f01c6b9200a04cf6ad1d5bf595246fd1" >Android</label>
+<input type="radio" id="3a219545a5324478998bbf8192844630-58efc63947c84d019f549dc2b0aedfdb" name="3a219545a5324478998bbf8192844630" class="tab" ><label for="3a219545a5324478998bbf8192844630-58efc63947c84d019f549dc2b0aedfdb" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
