--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -205,6 +205,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child active">
@@ -311,9 +336,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -331,6 +353,9 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -351,11 +376,11 @@
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="6ed85787e37845129301954d09d821be-6bf57453b18c4a9286660d6bdd7dac51" name="6ed85787e37845129301954d09d821be" class="tab" checked=""><label for="6ed85787e37845129301954d09d821be-6bf57453b18c4a9286660d6bdd7dac51">General</label>
-<input type="radio" id="6ed85787e37845129301954d09d821be-c6be9e8175774812a98dce60ccfc3568" name="6ed85787e37845129301954d09d821be" class="tab"><label for="6ed85787e37845129301954d09d821be-c6be9e8175774812a98dce60ccfc3568">Startup</label>
-<input type="radio" id="6ed85787e37845129301954d09d821be-f98cdc73d8bd41baa89638700f69b9ba" name="6ed85787e37845129301954d09d821be" class="tab"><label for="6ed85787e37845129301954d09d821be-f98cdc73d8bd41baa89638700f69b9ba">Android</label>
-<input type="radio" id="6ed85787e37845129301954d09d821be-162644492a164f28b864186a66667982" name="6ed85787e37845129301954d09d821be" class="tab"><label for="6ed85787e37845129301954d09d821be-162644492a164f28b864186a66667982">iOS</label>
-<input type="radio" id="6ed85787e37845129301954d09d821be-3ebde53d9ab4403b9f91d6ce67f1b133" name="6ed85787e37845129301954d09d821be" class="tab"><label for="6ed85787e37845129301954d09d821be-3ebde53d9ab4403b9f91d6ce67f1b133">Windows</label>
+<input type="radio" id="b013c1a12ac746a0a35b536c0f73f9e5-038f28f1964a4fec90459afe81eed6b7" name="b013c1a12ac746a0a35b536c0f73f9e5" class="tab" checked=""><label for="b013c1a12ac746a0a35b536c0f73f9e5-038f28f1964a4fec90459afe81eed6b7">General</label>
+<input type="radio" id="b013c1a12ac746a0a35b536c0f73f9e5-d021333af17b45b58c2b6d14e495da54" name="b013c1a12ac746a0a35b536c0f73f9e5" class="tab"><label for="b013c1a12ac746a0a35b536c0f73f9e5-d021333af17b45b58c2b6d14e495da54">Startup</label>
+<input type="radio" id="b013c1a12ac746a0a35b536c0f73f9e5-b0ecd72cf5b24032b4a6f85bf6544282" name="b013c1a12ac746a0a35b536c0f73f9e5" class="tab"><label for="b013c1a12ac746a0a35b536c0f73f9e5-b0ecd72cf5b24032b4a6f85bf6544282">Android</label>
+<input type="radio" id="b013c1a12ac746a0a35b536c0f73f9e5-49ccbb71a5624a15872ebd1be881f074" name="b013c1a12ac746a0a35b536c0f73f9e5" class="tab"><label for="b013c1a12ac746a0a35b536c0f73f9e5-49ccbb71a5624a15872ebd1be881f074">iOS</label>
+<input type="radio" id="b013c1a12ac746a0a35b536c0f73f9e5-8c5da48be3414dfbab543ce604b521ea" name="b013c1a12ac746a0a35b536c0f73f9e5" class="tab"><label for="b013c1a12ac746a0a35b536c0f73f9e5-8c5da48be3414dfbab543ce604b521ea">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
