--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,15 +356,18 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="edff03100a40465c8ed4d26d6b6f80ef-0e030048d4b549e288b3f3ed50f4d38c" name="edff03100a40465c8ed4d26d6b6f80ef" class="tab" checked><label for="edff03100a40465c8ed4d26d6b6f80ef-0e030048d4b549e288b3f3ed50f4d38c" >General</label>
-<input type="radio" id="edff03100a40465c8ed4d26d6b6f80ef-4f4dc84ae541424c9da8b5ae59d2d61b" name="edff03100a40465c8ed4d26d6b6f80ef" class="tab" ><label for="edff03100a40465c8ed4d26d6b6f80ef-4f4dc84ae541424c9da8b5ae59d2d61b" >Startup</label>
-<input type="radio" id="edff03100a40465c8ed4d26d6b6f80ef-cdaf5ac270834687868ffa1fd2a6c61d" name="edff03100a40465c8ed4d26d6b6f80ef" class="tab" ><label for="edff03100a40465c8ed4d26d6b6f80ef-cdaf5ac270834687868ffa1fd2a6c61d" >Android</label>
-<input type="radio" id="edff03100a40465c8ed4d26d6b6f80ef-ed963f5d4a2e47d79119afd64addc537" name="edff03100a40465c8ed4d26d6b6f80ef" class="tab" ><label for="edff03100a40465c8ed4d26d6b6f80ef-ed963f5d4a2e47d79119afd64addc537" >iOS</label>
-<input type="radio" id="edff03100a40465c8ed4d26d6b6f80ef-c4ab185bfaef428289fcac32c1041272" name="edff03100a40465c8ed4d26d6b6f80ef" class="tab" ><label for="edff03100a40465c8ed4d26d6b6f80ef-c4ab185bfaef428289fcac32c1041272" >Windows</label>
+<input type="radio" id="cd08cea407c240b28662b74465460af3-79c7a2c710f144b2ada170040ddef9f5" name="cd08cea407c240b28662b74465460af3" class="tab" checked><label for="cd08cea407c240b28662b74465460af3-79c7a2c710f144b2ada170040ddef9f5" >General</label>
+<input type="radio" id="cd08cea407c240b28662b74465460af3-014b4eb92fd3498b806d10b3035d5889" name="cd08cea407c240b28662b74465460af3" class="tab" ><label for="cd08cea407c240b28662b74465460af3-014b4eb92fd3498b806d10b3035d5889" >Startup</label>
+<input type="radio" id="cd08cea407c240b28662b74465460af3-43cd537609d14274a134e8e51e4cafdf" name="cd08cea407c240b28662b74465460af3" class="tab" ><label for="cd08cea407c240b28662b74465460af3-43cd537609d14274a134e8e51e4cafdf" >Android</label>
+<input type="radio" id="cd08cea407c240b28662b74465460af3-483ab24e8f1548ba9d02ce9eff12f892" name="cd08cea407c240b28662b74465460af3" class="tab" ><label for="cd08cea407c240b28662b74465460af3-483ab24e8f1548ba9d02ce9eff12f892" >iOS</label>
+<input type="radio" id="cd08cea407c240b28662b74465460af3-4cc11c0321124574a2f25b53cdf45899" name="cd08cea407c240b28662b74465460af3" class="tab" ><label for="cd08cea407c240b28662b74465460af3-4cc11c0321124574a2f25b53cdf45899" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
