--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,6 +356,9 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
@@ -347,10 +372,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="1df6a4b649a44607ba14ab83c7283d2c-e9e3e4645f8a4a388da77ff6a8d1af2d" name="1df6a4b649a44607ba14ab83c7283d2c" class="tab" checked><label for="1df6a4b649a44607ba14ab83c7283d2c-e9e3e4645f8a4a388da77ff6a8d1af2d" >General</label>
-<input type="radio" id="1df6a4b649a44607ba14ab83c7283d2c-d746dba0e381471e896e703729b478c9" name="1df6a4b649a44607ba14ab83c7283d2c" class="tab" ><label for="1df6a4b649a44607ba14ab83c7283d2c-d746dba0e381471e896e703729b478c9" >Startup</label>
-<input type="radio" id="1df6a4b649a44607ba14ab83c7283d2c-59708a07cd684346ae60e77c47e543f7" name="1df6a4b649a44607ba14ab83c7283d2c" class="tab" ><label for="1df6a4b649a44607ba14ab83c7283d2c-59708a07cd684346ae60e77c47e543f7" >Android</label>
-<input type="radio" id="1df6a4b649a44607ba14ab83c7283d2c-fdfa8defac9448a1b8c0ee8819b0b010" name="1df6a4b649a44607ba14ab83c7283d2c" class="tab" ><label for="1df6a4b649a44607ba14ab83c7283d2c-fdfa8defac9448a1b8c0ee8819b0b010" >iOS</label>
+<input type="radio" id="34e5a530e9704891b1139cd6802b6ba3-79467a00f629487c9ebde714568dcc0c" name="34e5a530e9704891b1139cd6802b6ba3" class="tab" checked><label for="34e5a530e9704891b1139cd6802b6ba3-79467a00f629487c9ebde714568dcc0c" >General</label>
+<input type="radio" id="34e5a530e9704891b1139cd6802b6ba3-879c8ec624d9444fb5a78efc179eb3c5" name="34e5a530e9704891b1139cd6802b6ba3" class="tab" ><label for="34e5a530e9704891b1139cd6802b6ba3-879c8ec624d9444fb5a78efc179eb3c5" >Startup</label>
+<input type="radio" id="34e5a530e9704891b1139cd6802b6ba3-3b47f9c5927a477ca7d44ba8b721f34c" name="34e5a530e9704891b1139cd6802b6ba3" class="tab" ><label for="34e5a530e9704891b1139cd6802b6ba3-3b47f9c5927a477ca7d44ba8b721f34c" >Android</label>
+<input type="radio" id="34e5a530e9704891b1139cd6802b6ba3-26f0ed5cbdfd465f9e5ae7015aef27b6" name="34e5a530e9704891b1139cd6802b6ba3" class="tab" ><label for="34e5a530e9704891b1139cd6802b6ba3-26f0ed5cbdfd465f9e5ae7015aef27b6" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
