--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -205,6 +205,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -311,9 +336,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,6 +354,9 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
@@ -339,11 +364,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="4a9a0ff434b94f5a802eb7296355d83b-60a48e2fe9db4d5fa825cb0a16b482b8" name="4a9a0ff434b94f5a802eb7296355d83b" class="tab" checked=""><label for="4a9a0ff434b94f5a802eb7296355d83b-60a48e2fe9db4d5fa825cb0a16b482b8">General</label>
-<input type="radio" id="4a9a0ff434b94f5a802eb7296355d83b-82da315bf7be40738fb5cc80cee8f8ad" name="4a9a0ff434b94f5a802eb7296355d83b" class="tab"><label for="4a9a0ff434b94f5a802eb7296355d83b-82da315bf7be40738fb5cc80cee8f8ad">Startup</label>
-<input type="radio" id="4a9a0ff434b94f5a802eb7296355d83b-6e21121bcbd147f18fbc24d6669b8dca" name="4a9a0ff434b94f5a802eb7296355d83b" class="tab"><label for="4a9a0ff434b94f5a802eb7296355d83b-6e21121bcbd147f18fbc24d6669b8dca">Android</label>
-<input type="radio" id="4a9a0ff434b94f5a802eb7296355d83b-57e0ee878b4c4896a3171950e3c39936" name="4a9a0ff434b94f5a802eb7296355d83b" class="tab"><label for="4a9a0ff434b94f5a802eb7296355d83b-57e0ee878b4c4896a3171950e3c39936">iOS</label>
-<input type="radio" id="4a9a0ff434b94f5a802eb7296355d83b-9812e6db4d3949ca97eeb34233cf17d7" name="4a9a0ff434b94f5a802eb7296355d83b" class="tab"><label for="4a9a0ff434b94f5a802eb7296355d83b-9812e6db4d3949ca97eeb34233cf17d7">Windows</label>
+<input type="radio" id="edc966ed2f924fb28279bc71bdc29796-d10889e20a5a42608d71d8b94c84765f" name="edc966ed2f924fb28279bc71bdc29796" class="tab" checked=""><label for="edc966ed2f924fb28279bc71bdc29796-d10889e20a5a42608d71d8b94c84765f">General</label>
+<input type="radio" id="edc966ed2f924fb28279bc71bdc29796-64200ff052624f93be1910fa5d5893d9" name="edc966ed2f924fb28279bc71bdc29796" class="tab"><label for="edc966ed2f924fb28279bc71bdc29796-64200ff052624f93be1910fa5d5893d9">Startup</label>
+<input type="radio" id="edc966ed2f924fb28279bc71bdc29796-74edd726ae1945cb8c6c959503cc7f3b" name="edc966ed2f924fb28279bc71bdc29796" class="tab"><label for="edc966ed2f924fb28279bc71bdc29796-74edd726ae1945cb8c6c959503cc7f3b">Android</label>
+<input type="radio" id="edc966ed2f924fb28279bc71bdc29796-8ef6268c9ab84da8aebb7d02b11cb80b" name="edc966ed2f924fb28279bc71bdc29796" class="tab"><label for="edc966ed2f924fb28279bc71bdc29796-8ef6268c9ab84da8aebb7d02b11cb80b">iOS</label>
+<input type="radio" id="edc966ed2f924fb28279bc71bdc29796-541be6bf3eda4e9b9609379bb85f7db6" name="edc966ed2f924fb28279bc71bdc29796" class="tab"><label for="edc966ed2f924fb28279bc71bdc29796-541be6bf3eda4e9b9609379bb85f7db6">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
