--- a/push/azure.html
+++ b/push/azure.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,15 +356,18 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="8ba75a67d2d0449091b64d17aba6a7ba-add07dd05dec401ba8ca1363ca9460ec" name="8ba75a67d2d0449091b64d17aba6a7ba" class="tab" checked><label for="8ba75a67d2d0449091b64d17aba6a7ba-add07dd05dec401ba8ca1363ca9460ec" >General</label>
-<input type="radio" id="8ba75a67d2d0449091b64d17aba6a7ba-2de24388e69c443e8868071d3b929b44" name="8ba75a67d2d0449091b64d17aba6a7ba" class="tab" ><label for="8ba75a67d2d0449091b64d17aba6a7ba-2de24388e69c443e8868071d3b929b44" >Startup</label>
-<input type="radio" id="8ba75a67d2d0449091b64d17aba6a7ba-e5f326dc24db4cd3aba26842f8878ee5" name="8ba75a67d2d0449091b64d17aba6a7ba" class="tab" ><label for="8ba75a67d2d0449091b64d17aba6a7ba-e5f326dc24db4cd3aba26842f8878ee5" >Android</label>
-<input type="radio" id="8ba75a67d2d0449091b64d17aba6a7ba-b6ba9a211ad945c5a2b79578125c5075" name="8ba75a67d2d0449091b64d17aba6a7ba" class="tab" ><label for="8ba75a67d2d0449091b64d17aba6a7ba-b6ba9a211ad945c5a2b79578125c5075" >iOS</label>
-<input type="radio" id="8ba75a67d2d0449091b64d17aba6a7ba-5f522751153a4ad8a816b7b1d308fb35" name="8ba75a67d2d0449091b64d17aba6a7ba" class="tab" ><label for="8ba75a67d2d0449091b64d17aba6a7ba-5f522751153a4ad8a816b7b1d308fb35" >Windows</label>
+<input type="radio" id="52f6e60fe1f94f5f884608b901822f05-e9d8d783c6804b0eb2f7d1a145b78f4a" name="52f6e60fe1f94f5f884608b901822f05" class="tab" checked><label for="52f6e60fe1f94f5f884608b901822f05-e9d8d783c6804b0eb2f7d1a145b78f4a" >General</label>
+<input type="radio" id="52f6e60fe1f94f5f884608b901822f05-cf1f9e11f22f41b0914c8d2cebcdeab3" name="52f6e60fe1f94f5f884608b901822f05" class="tab" ><label for="52f6e60fe1f94f5f884608b901822f05-cf1f9e11f22f41b0914c8d2cebcdeab3" >Startup</label>
+<input type="radio" id="52f6e60fe1f94f5f884608b901822f05-2c392af954604aa38a2f1b2bd545ac39" name="52f6e60fe1f94f5f884608b901822f05" class="tab" ><label for="52f6e60fe1f94f5f884608b901822f05-2c392af954604aa38a2f1b2bd545ac39" >Android</label>
+<input type="radio" id="52f6e60fe1f94f5f884608b901822f05-83ecd8b0c0ef485288496d4f20330171" name="52f6e60fe1f94f5f884608b901822f05" class="tab" ><label for="52f6e60fe1f94f5f884608b901822f05-83ecd8b0c0ef485288496d4f20330171" >iOS</label>
+<input type="radio" id="52f6e60fe1f94f5f884608b901822f05-3c9ce250ed18486ba69592eff2ff33c2" name="52f6e60fe1f94f5f884608b901822f05" class="tab" ><label for="52f6e60fe1f94f5f884608b901822f05-3c9ce250ed18486ba69592eff2ff33c2" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
