--- a/push/firebase.html
+++ b/push/firebase.html
@@ -205,6 +205,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -311,9 +336,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,14 +354,17 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="8d3c31bf25654141a1ddff252c0983cf-db42417eb6934a028bfad8a699473129" name="8d3c31bf25654141a1ddff252c0983cf" class="tab" checked=""><label for="8d3c31bf25654141a1ddff252c0983cf-db42417eb6934a028bfad8a699473129">General</label>
-<input type="radio" id="8d3c31bf25654141a1ddff252c0983cf-51f1e5dd119b458f9b53de238c5c585b" name="8d3c31bf25654141a1ddff252c0983cf" class="tab"><label for="8d3c31bf25654141a1ddff252c0983cf-51f1e5dd119b458f9b53de238c5c585b">Startup</label>
-<input type="radio" id="8d3c31bf25654141a1ddff252c0983cf-3eaee21824df45b8b04eb384c5fe3475" name="8d3c31bf25654141a1ddff252c0983cf" class="tab"><label for="8d3c31bf25654141a1ddff252c0983cf-3eaee21824df45b8b04eb384c5fe3475">Android</label>
-<input type="radio" id="8d3c31bf25654141a1ddff252c0983cf-992ea06d2acf4373819526b68e3c43d6" name="8d3c31bf25654141a1ddff252c0983cf" class="tab"><label for="8d3c31bf25654141a1ddff252c0983cf-992ea06d2acf4373819526b68e3c43d6">iOS</label>
+<input type="radio" id="470981fd7e464725a4c94209bd7edf64-4ac47ecfa8854cb9b0796dd4e53b02f5" name="470981fd7e464725a4c94209bd7edf64" class="tab" checked=""><label for="470981fd7e464725a4c94209bd7edf64-4ac47ecfa8854cb9b0796dd4e53b02f5">General</label>
+<input type="radio" id="470981fd7e464725a4c94209bd7edf64-85c5ce44558d4dd39dfbb05e5cb9004c" name="470981fd7e464725a4c94209bd7edf64" class="tab"><label for="470981fd7e464725a4c94209bd7edf64-85c5ce44558d4dd39dfbb05e5cb9004c">Startup</label>
+<input type="radio" id="470981fd7e464725a4c94209bd7edf64-ff8d2bff329a4911a7ae283d1a45604c" name="470981fd7e464725a4c94209bd7edf64" class="tab"><label for="470981fd7e464725a4c94209bd7edf64-ff8d2bff329a4911a7ae283d1a45604c">Android</label>
+<input type="radio" id="470981fd7e464725a4c94209bd7edf64-e1cf153a3fd24195a78b014bd488485d" name="470981fd7e464725a4c94209bd7edf64" class="tab"><label for="470981fd7e464725a4c94209bd7edf64-e1cf153a3fd24195a78b014bd488485d">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
