--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,6 +356,9 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
@@ -341,12 +366,13 @@
 <h1>Sections</h1>
 
 <ul>
-        <li><a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a></li>
-        <li><a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a></li>
-        <li><a href="/release-notes/v121">v1.2.1 (September 1, 2020)</a></li>
-        <li><a href="/release-notes/v12">v1.2.0 (August 1, 2020)</a></li>
-        <li><a href="/release-notes/v11">v1.1.0 (March 1, 2020)</a></li>
         <li><a href="/release-notes/v10">v1.0.0 (May 1, 2019)</a></li>
+        <li><a href="/release-notes/v11">v1.1.0 (March 1, 2020)</a></li>
+        <li><a href="/release-notes/v12">v1.2.0 (August 1, 2020)</a></li>
+        <li><a href="/release-notes/v121">v1.2.1 (September 1, 2020)</a></li>
+        <li><a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a></li>
+        <li><a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a></li>
+        <li><a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a></li>
 </ul>
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
