--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,15 +356,18 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="a14271abefa84b938cd19faa0c8e2ac1-ee51a5503037455ab052c848d1abbbe1" name="a14271abefa84b938cd19faa0c8e2ac1" class="tab" checked><label for="a14271abefa84b938cd19faa0c8e2ac1-ee51a5503037455ab052c848d1abbbe1" >General</label>
-<input type="radio" id="a14271abefa84b938cd19faa0c8e2ac1-c2102fbd8fde4b549bcbbafcd860276a" name="a14271abefa84b938cd19faa0c8e2ac1" class="tab" ><label for="a14271abefa84b938cd19faa0c8e2ac1-c2102fbd8fde4b549bcbbafcd860276a" >Startup</label>
-<input type="radio" id="a14271abefa84b938cd19faa0c8e2ac1-55fff8d879094156995277a8f9056314" name="a14271abefa84b938cd19faa0c8e2ac1" class="tab" ><label for="a14271abefa84b938cd19faa0c8e2ac1-55fff8d879094156995277a8f9056314" >Android</label>
-<input type="radio" id="a14271abefa84b938cd19faa0c8e2ac1-38c0bd47c6054765a7538d75adf6abd2" name="a14271abefa84b938cd19faa0c8e2ac1" class="tab" ><label for="a14271abefa84b938cd19faa0c8e2ac1-38c0bd47c6054765a7538d75adf6abd2" >iOS</label>
-<input type="radio" id="a14271abefa84b938cd19faa0c8e2ac1-7f582c6ead354be48275001de7083212" name="a14271abefa84b938cd19faa0c8e2ac1" class="tab" ><label for="a14271abefa84b938cd19faa0c8e2ac1-7f582c6ead354be48275001de7083212" >Windows</label>
+<input type="radio" id="cd6dbcd05a54442da779ee3914fac410-070ed999856f4f9e868ce8f1f3808a3e" name="cd6dbcd05a54442da779ee3914fac410" class="tab" checked><label for="cd6dbcd05a54442da779ee3914fac410-070ed999856f4f9e868ce8f1f3808a3e" >General</label>
+<input type="radio" id="cd6dbcd05a54442da779ee3914fac410-df713ff76910481c829f57bcd76b447f" name="cd6dbcd05a54442da779ee3914fac410" class="tab" ><label for="cd6dbcd05a54442da779ee3914fac410-df713ff76910481c829f57bcd76b447f" >Startup</label>
+<input type="radio" id="cd6dbcd05a54442da779ee3914fac410-3fe99e4391134878be27b1fe51d2b69f" name="cd6dbcd05a54442da779ee3914fac410" class="tab" ><label for="cd6dbcd05a54442da779ee3914fac410-3fe99e4391134878be27b1fe51d2b69f" >Android</label>
+<input type="radio" id="cd6dbcd05a54442da779ee3914fac410-8df136fcd44640c0aaae4ca5ae5c3e5c" name="cd6dbcd05a54442da779ee3914fac410" class="tab" ><label for="cd6dbcd05a54442da779ee3914fac410-8df136fcd44640c0aaae4ca5ae5c3e5c" >iOS</label>
+<input type="radio" id="cd6dbcd05a54442da779ee3914fac410-e548ea0323684aa29cbf2d7657a4da37" name="cd6dbcd05a54442da779ee3914fac410" class="tab" ><label for="cd6dbcd05a54442da779ee3914fac410-e548ea0323684aa29cbf2d7657a4da37" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
