--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,14 +356,17 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="1ad47f4e951245c6b552f60caae2ca0a-61f38d49a8444a0ca5cff3203e6ad475" name="1ad47f4e951245c6b552f60caae2ca0a" class="tab" checked><label for="1ad47f4e951245c6b552f60caae2ca0a-61f38d49a8444a0ca5cff3203e6ad475" >General</label>
-<input type="radio" id="1ad47f4e951245c6b552f60caae2ca0a-9077e2b3ae0447088456ae80fde5d90f" name="1ad47f4e951245c6b552f60caae2ca0a" class="tab" ><label for="1ad47f4e951245c6b552f60caae2ca0a-9077e2b3ae0447088456ae80fde5d90f" >Startup</label>
-<input type="radio" id="1ad47f4e951245c6b552f60caae2ca0a-0ee69a673700473dbdb5f1880177991d" name="1ad47f4e951245c6b552f60caae2ca0a" class="tab" ><label for="1ad47f4e951245c6b552f60caae2ca0a-0ee69a673700473dbdb5f1880177991d" >Android</label>
-<input type="radio" id="1ad47f4e951245c6b552f60caae2ca0a-971eaa0298e9433fb44400db5c405bb8" name="1ad47f4e951245c6b552f60caae2ca0a" class="tab" ><label for="1ad47f4e951245c6b552f60caae2ca0a-971eaa0298e9433fb44400db5c405bb8" >Windows</label>
+<input type="radio" id="d4d763a359554214a85ef9b449d56801-00822800f1324a228c0fb1e40fdf1637" name="d4d763a359554214a85ef9b449d56801" class="tab" checked><label for="d4d763a359554214a85ef9b449d56801-00822800f1324a228c0fb1e40fdf1637" >General</label>
+<input type="radio" id="d4d763a359554214a85ef9b449d56801-fb802e60625f477da339d07c6bb6e134" name="d4d763a359554214a85ef9b449d56801" class="tab" ><label for="d4d763a359554214a85ef9b449d56801-fb802e60625f477da339d07c6bb6e134" >Startup</label>
+<input type="radio" id="d4d763a359554214a85ef9b449d56801-d71d051cc6f44d41a8dcce338d6e33b0" name="d4d763a359554214a85ef9b449d56801" class="tab" ><label for="d4d763a359554214a85ef9b449d56801-d71d051cc6f44d41a8dcce338d6e33b0" >Android</label>
+<input type="radio" id="d4d763a359554214a85ef9b449d56801-9b96571379c5470b8066040892421d71" name="d4d763a359554214a85ef9b449d56801" class="tab" ><label for="d4d763a359554214a85ef9b449d56801-9b96571379c5470b8066040892421d71" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
