--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,15 +356,18 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="3b987b1930614ce282c9ba1d1a01005d-56eb5838a65947cd869177472ade6890" name="3b987b1930614ce282c9ba1d1a01005d" class="tab" checked><label for="3b987b1930614ce282c9ba1d1a01005d-56eb5838a65947cd869177472ade6890" >General</label>
-<input type="radio" id="3b987b1930614ce282c9ba1d1a01005d-743aa08fae384b22ab46930d0638e4eb" name="3b987b1930614ce282c9ba1d1a01005d" class="tab" ><label for="3b987b1930614ce282c9ba1d1a01005d-743aa08fae384b22ab46930d0638e4eb" >Startup</label>
-<input type="radio" id="3b987b1930614ce282c9ba1d1a01005d-4457daebcbcd4223a2df85cd3daee22e" name="3b987b1930614ce282c9ba1d1a01005d" class="tab" ><label for="3b987b1930614ce282c9ba1d1a01005d-4457daebcbcd4223a2df85cd3daee22e" >Android</label>
-<input type="radio" id="3b987b1930614ce282c9ba1d1a01005d-38715f2c3166484cacedf1496e62c697" name="3b987b1930614ce282c9ba1d1a01005d" class="tab" ><label for="3b987b1930614ce282c9ba1d1a01005d-38715f2c3166484cacedf1496e62c697" >iOS</label>
-<input type="radio" id="3b987b1930614ce282c9ba1d1a01005d-9ee582ee018042a18613c51190eb0542" name="3b987b1930614ce282c9ba1d1a01005d" class="tab" ><label for="3b987b1930614ce282c9ba1d1a01005d-9ee582ee018042a18613c51190eb0542" >Windows</label>
+<input type="radio" id="f0e79fd61ce74f23bb3b0ee3238fa273-206661bd75c84e94862fa1b8cea7b134" name="f0e79fd61ce74f23bb3b0ee3238fa273" class="tab" checked><label for="f0e79fd61ce74f23bb3b0ee3238fa273-206661bd75c84e94862fa1b8cea7b134" >General</label>
+<input type="radio" id="f0e79fd61ce74f23bb3b0ee3238fa273-56556ada9fdf450c86cdd7470d30b125" name="f0e79fd61ce74f23bb3b0ee3238fa273" class="tab" ><label for="f0e79fd61ce74f23bb3b0ee3238fa273-56556ada9fdf450c86cdd7470d30b125" >Startup</label>
+<input type="radio" id="f0e79fd61ce74f23bb3b0ee3238fa273-e90af167182942bb9e33547427408b56" name="f0e79fd61ce74f23bb3b0ee3238fa273" class="tab" ><label for="f0e79fd61ce74f23bb3b0ee3238fa273-e90af167182942bb9e33547427408b56" >Android</label>
+<input type="radio" id="f0e79fd61ce74f23bb3b0ee3238fa273-50db9648b94e4c3a8047441e7d097c9a" name="f0e79fd61ce74f23bb3b0ee3238fa273" class="tab" ><label for="f0e79fd61ce74f23bb3b0ee3238fa273-50db9648b94e4c3a8047441e7d097c9a" >iOS</label>
+<input type="radio" id="f0e79fd61ce74f23bb3b0ee3238fa273-03e86f35b1654cc093b4f4ea5ddfba62" name="f0e79fd61ce74f23bb3b0ee3238fa273" class="tab" ><label for="f0e79fd61ce74f23bb3b0ee3238fa273-03e86f35b1654cc093b4f4ea5ddfba62" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
