--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,15 +356,18 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="55fb76df593240e08eafa669904b285a-d2321d3d315641d0968b227825090d86" name="55fb76df593240e08eafa669904b285a" class="tab" checked><label for="55fb76df593240e08eafa669904b285a-d2321d3d315641d0968b227825090d86" >General</label>
-<input type="radio" id="55fb76df593240e08eafa669904b285a-e9b1fa65cf484e34896740496e8ecb0a" name="55fb76df593240e08eafa669904b285a" class="tab" ><label for="55fb76df593240e08eafa669904b285a-e9b1fa65cf484e34896740496e8ecb0a" >Startup</label>
-<input type="radio" id="55fb76df593240e08eafa669904b285a-37f101948bed4af8acfbb4fb3a42b4ff" name="55fb76df593240e08eafa669904b285a" class="tab" ><label for="55fb76df593240e08eafa669904b285a-37f101948bed4af8acfbb4fb3a42b4ff" >Android</label>
-<input type="radio" id="55fb76df593240e08eafa669904b285a-91c87725f43f4502b79a3b8f17dc0276" name="55fb76df593240e08eafa669904b285a" class="tab" ><label for="55fb76df593240e08eafa669904b285a-91c87725f43f4502b79a3b8f17dc0276" >iOS</label>
-<input type="radio" id="55fb76df593240e08eafa669904b285a-caad070306f241ab8bec0ebd6aae639b" name="55fb76df593240e08eafa669904b285a" class="tab" ><label for="55fb76df593240e08eafa669904b285a-caad070306f241ab8bec0ebd6aae639b" >Windows</label>
+<input type="radio" id="852d54c9af234d7bae146b96f63f8f0d-8764426900de4521a59bc79768667d66" name="852d54c9af234d7bae146b96f63f8f0d" class="tab" checked><label for="852d54c9af234d7bae146b96f63f8f0d-8764426900de4521a59bc79768667d66" >General</label>
+<input type="radio" id="852d54c9af234d7bae146b96f63f8f0d-cd3b1861044e4ef8959f7d2d4161ebf4" name="852d54c9af234d7bae146b96f63f8f0d" class="tab" ><label for="852d54c9af234d7bae146b96f63f8f0d-cd3b1861044e4ef8959f7d2d4161ebf4" >Startup</label>
+<input type="radio" id="852d54c9af234d7bae146b96f63f8f0d-0415d123419a498e8c7ca657f9c0e43a" name="852d54c9af234d7bae146b96f63f8f0d" class="tab" ><label for="852d54c9af234d7bae146b96f63f8f0d-0415d123419a498e8c7ca657f9c0e43a" >Android</label>
+<input type="radio" id="852d54c9af234d7bae146b96f63f8f0d-5f703153d8eb4dceaef314e7ba174028" name="852d54c9af234d7bae146b96f63f8f0d" class="tab" ><label for="852d54c9af234d7bae146b96f63f8f0d-5f703153d8eb4dceaef314e7ba174028" >iOS</label>
+<input type="radio" id="852d54c9af234d7bae146b96f63f8f0d-db365547dd234e70a5170beff2390fa7" name="852d54c9af234d7bae146b96f63f8f0d" class="tab" ><label for="852d54c9af234d7bae146b96f63f8f0d-db365547dd234e70a5170beff2390fa7" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
