--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,15 +356,18 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="307d0cb47fae45ad865ed6f3d6549d30-bbfad106fb234ca8a881f0350d0b56a9" name="307d0cb47fae45ad865ed6f3d6549d30" class="tab" checked><label for="307d0cb47fae45ad865ed6f3d6549d30-bbfad106fb234ca8a881f0350d0b56a9" >General</label>
-<input type="radio" id="307d0cb47fae45ad865ed6f3d6549d30-f324d0a9daa3475581b5fe7e9fa8349e" name="307d0cb47fae45ad865ed6f3d6549d30" class="tab" ><label for="307d0cb47fae45ad865ed6f3d6549d30-f324d0a9daa3475581b5fe7e9fa8349e" >Startup</label>
-<input type="radio" id="307d0cb47fae45ad865ed6f3d6549d30-d423d914d96e4be095c43e4f687d1e11" name="307d0cb47fae45ad865ed6f3d6549d30" class="tab" ><label for="307d0cb47fae45ad865ed6f3d6549d30-d423d914d96e4be095c43e4f687d1e11" >Android</label>
-<input type="radio" id="307d0cb47fae45ad865ed6f3d6549d30-abe103fdfe2c4e58a2897a0c1d95210a" name="307d0cb47fae45ad865ed6f3d6549d30" class="tab" ><label for="307d0cb47fae45ad865ed6f3d6549d30-abe103fdfe2c4e58a2897a0c1d95210a" >iOS</label>
-<input type="radio" id="307d0cb47fae45ad865ed6f3d6549d30-a55037cfd01140bfa6fedd1f42d23d4b" name="307d0cb47fae45ad865ed6f3d6549d30" class="tab" ><label for="307d0cb47fae45ad865ed6f3d6549d30-a55037cfd01140bfa6fedd1f42d23d4b" >Windows</label>
+<input type="radio" id="4037823efd30423fbd371be807d6860a-7b99e26410b24877b76bf39739fd6d1e" name="4037823efd30423fbd371be807d6860a" class="tab" checked><label for="4037823efd30423fbd371be807d6860a-7b99e26410b24877b76bf39739fd6d1e" >General</label>
+<input type="radio" id="4037823efd30423fbd371be807d6860a-b4f52c347d5b44bd9bff2990c84017f0" name="4037823efd30423fbd371be807d6860a" class="tab" ><label for="4037823efd30423fbd371be807d6860a-b4f52c347d5b44bd9bff2990c84017f0" >Startup</label>
+<input type="radio" id="4037823efd30423fbd371be807d6860a-faf9d97aeb844d3c96ac5dacfa082044" name="4037823efd30423fbd371be807d6860a" class="tab" ><label for="4037823efd30423fbd371be807d6860a-faf9d97aeb844d3c96ac5dacfa082044" >Android</label>
+<input type="radio" id="4037823efd30423fbd371be807d6860a-39d880987a2c46cd908b7a5e9f560c53" name="4037823efd30423fbd371be807d6860a" class="tab" ><label for="4037823efd30423fbd371be807d6860a-39d880987a2c46cd908b7a5e9f560c53" >iOS</label>
+<input type="radio" id="4037823efd30423fbd371be807d6860a-b5fb64ce832747f0bfdc8e4ad336c4ac" name="4037823efd30423fbd371be807d6860a" class="tab" ><label for="4037823efd30423fbd371be807d6860a-b5fb64ce832747f0bfdc8e4ad336c4ac" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
