--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,13 +356,16 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="76b72ea012e64044bd48cf85b304e72e-503f089476f247b788a20222a1bf21f9" name="76b72ea012e64044bd48cf85b304e72e" class="tab" checked><label for="76b72ea012e64044bd48cf85b304e72e-503f089476f247b788a20222a1bf21f9" >General</label>
-<input type="radio" id="76b72ea012e64044bd48cf85b304e72e-e2898d4599a14cd289cedf3d0f074590" name="76b72ea012e64044bd48cf85b304e72e" class="tab" ><label for="76b72ea012e64044bd48cf85b304e72e-e2898d4599a14cd289cedf3d0f074590" >Startup</label>
-<input type="radio" id="76b72ea012e64044bd48cf85b304e72e-f155620417914067a2becfffd4cdb204" name="76b72ea012e64044bd48cf85b304e72e" class="tab" ><label for="76b72ea012e64044bd48cf85b304e72e-f155620417914067a2becfffd4cdb204" >Android</label>
+<input type="radio" id="9d21ec62828845338eb7400603d824c9-8f4111cef6ef40d795535e01024690c8" name="9d21ec62828845338eb7400603d824c9" class="tab" checked><label for="9d21ec62828845338eb7400603d824c9-8f4111cef6ef40d795535e01024690c8" >General</label>
+<input type="radio" id="9d21ec62828845338eb7400603d824c9-53cdcf3141ef4d8ab24b5003304efb67" name="9d21ec62828845338eb7400603d824c9" class="tab" ><label for="9d21ec62828845338eb7400603d824c9-53cdcf3141ef4d8ab24b5003304efb67" >Startup</label>
+<input type="radio" id="9d21ec62828845338eb7400603d824c9-f9d570052d404825b999984904165d3c" name="9d21ec62828845338eb7400603d824c9" class="tab" ><label for="9d21ec62828845338eb7400603d824c9-f9d570052d404825b999984904165d3c" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
