--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,15 +356,18 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="454958fd4d2944168068e35185a2bf29-72dd76d0846a4c93bb0e574e86da395a" name="454958fd4d2944168068e35185a2bf29" class="tab" checked><label for="454958fd4d2944168068e35185a2bf29-72dd76d0846a4c93bb0e574e86da395a" >General</label>
-<input type="radio" id="454958fd4d2944168068e35185a2bf29-a3226587529a4b1fae45b1b5eb753ee3" name="454958fd4d2944168068e35185a2bf29" class="tab" ><label for="454958fd4d2944168068e35185a2bf29-a3226587529a4b1fae45b1b5eb753ee3" >Startup</label>
-<input type="radio" id="454958fd4d2944168068e35185a2bf29-4366d9729a7c46938f33e1f9c5569363" name="454958fd4d2944168068e35185a2bf29" class="tab" ><label for="454958fd4d2944168068e35185a2bf29-4366d9729a7c46938f33e1f9c5569363" >Android</label>
-<input type="radio" id="454958fd4d2944168068e35185a2bf29-ea3f55e031b341c38357e4d0bd3f9673" name="454958fd4d2944168068e35185a2bf29" class="tab" ><label for="454958fd4d2944168068e35185a2bf29-ea3f55e031b341c38357e4d0bd3f9673" >iOS</label>
-<input type="radio" id="454958fd4d2944168068e35185a2bf29-885c3322f32f4c8abef85468e252b00e" name="454958fd4d2944168068e35185a2bf29" class="tab" ><label for="454958fd4d2944168068e35185a2bf29-885c3322f32f4c8abef85468e252b00e" >Windows</label>
+<input type="radio" id="f2fff6b5a83445fe87dee49e365f2d82-94d20ff61e0f4ba69a91173770046595" name="f2fff6b5a83445fe87dee49e365f2d82" class="tab" checked><label for="f2fff6b5a83445fe87dee49e365f2d82-94d20ff61e0f4ba69a91173770046595" >General</label>
+<input type="radio" id="f2fff6b5a83445fe87dee49e365f2d82-770b63137cf5445293f150b7d308f8e9" name="f2fff6b5a83445fe87dee49e365f2d82" class="tab" ><label for="f2fff6b5a83445fe87dee49e365f2d82-770b63137cf5445293f150b7d308f8e9" >Startup</label>
+<input type="radio" id="f2fff6b5a83445fe87dee49e365f2d82-5b591403985a489f8a8c08aad23ee362" name="f2fff6b5a83445fe87dee49e365f2d82" class="tab" ><label for="f2fff6b5a83445fe87dee49e365f2d82-5b591403985a489f8a8c08aad23ee362" >Android</label>
+<input type="radio" id="f2fff6b5a83445fe87dee49e365f2d82-13accf61a3714662ad2705a0fe415bd7" name="f2fff6b5a83445fe87dee49e365f2d82" class="tab" ><label for="f2fff6b5a83445fe87dee49e365f2d82-13accf61a3714662ad2705a0fe415bd7" >iOS</label>
+<input type="radio" id="f2fff6b5a83445fe87dee49e365f2d82-ad869ce450564049ad8da2a168440404" name="f2fff6b5a83445fe87dee49e365f2d82" class="tab" ><label for="f2fff6b5a83445fe87dee49e365f2d82-ad869ce450564049ad8da2a168440404" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
