--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,15 +356,18 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="527da9cceeeb475fad8add68848439ef-c200fad1f0034c5ba1a17dbe05580e19" name="527da9cceeeb475fad8add68848439ef" class="tab" checked><label for="527da9cceeeb475fad8add68848439ef-c200fad1f0034c5ba1a17dbe05580e19" >General</label>
-<input type="radio" id="527da9cceeeb475fad8add68848439ef-0e0408318c9e4f8da23696750b71af10" name="527da9cceeeb475fad8add68848439ef" class="tab" ><label for="527da9cceeeb475fad8add68848439ef-0e0408318c9e4f8da23696750b71af10" >Startup</label>
-<input type="radio" id="527da9cceeeb475fad8add68848439ef-06ce4c3822cc4641b8578fd3ab49e485" name="527da9cceeeb475fad8add68848439ef" class="tab" ><label for="527da9cceeeb475fad8add68848439ef-06ce4c3822cc4641b8578fd3ab49e485" >Android</label>
-<input type="radio" id="527da9cceeeb475fad8add68848439ef-8495d588deba48ea956211b98bc31c1a" name="527da9cceeeb475fad8add68848439ef" class="tab" ><label for="527da9cceeeb475fad8add68848439ef-8495d588deba48ea956211b98bc31c1a" >iOS</label>
-<input type="radio" id="527da9cceeeb475fad8add68848439ef-27bfafcb99b842f5882b059051fe5816" name="527da9cceeeb475fad8add68848439ef" class="tab" ><label for="527da9cceeeb475fad8add68848439ef-27bfafcb99b842f5882b059051fe5816" >Windows</label>
+<input type="radio" id="4eab4cbb2ad844b18ef850791035a099-55cb490b85ad4f09a43df507bfa57850" name="4eab4cbb2ad844b18ef850791035a099" class="tab" checked><label for="4eab4cbb2ad844b18ef850791035a099-55cb490b85ad4f09a43df507bfa57850" >General</label>
+<input type="radio" id="4eab4cbb2ad844b18ef850791035a099-b1e2497a53064f24ad90d0d18e97a25c" name="4eab4cbb2ad844b18ef850791035a099" class="tab" ><label for="4eab4cbb2ad844b18ef850791035a099-b1e2497a53064f24ad90d0d18e97a25c" >Startup</label>
+<input type="radio" id="4eab4cbb2ad844b18ef850791035a099-73f33c53531d49e7b3e6a2438d6c40ee" name="4eab4cbb2ad844b18ef850791035a099" class="tab" ><label for="4eab4cbb2ad844b18ef850791035a099-73f33c53531d49e7b3e6a2438d6c40ee" >Android</label>
+<input type="radio" id="4eab4cbb2ad844b18ef850791035a099-932dd7e1b0684fecaf5e010b871d94a6" name="4eab4cbb2ad844b18ef850791035a099" class="tab" ><label for="4eab4cbb2ad844b18ef850791035a099-932dd7e1b0684fecaf5e010b871d94a6" >iOS</label>
+<input type="radio" id="4eab4cbb2ad844b18ef850791035a099-bd5abca469cf475bbad472d0a10da855" name="4eab4cbb2ad844b18ef850791035a099" class="tab" ><label for="4eab4cbb2ad844b18ef850791035a099-bd5abca469cf475bbad472d0a10da855" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
