--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,14 +356,17 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="a9619fc643b442c8942bc63d8ee30021-16aa240410c3405a955595ffad089101" name="a9619fc643b442c8942bc63d8ee30021" class="tab" checked><label for="a9619fc643b442c8942bc63d8ee30021-16aa240410c3405a955595ffad089101" >General</label>
-<input type="radio" id="a9619fc643b442c8942bc63d8ee30021-6e4248ab402d4997b6062224234c61e6" name="a9619fc643b442c8942bc63d8ee30021" class="tab" ><label for="a9619fc643b442c8942bc63d8ee30021-6e4248ab402d4997b6062224234c61e6" >Startup</label>
-<input type="radio" id="a9619fc643b442c8942bc63d8ee30021-35aeed4d1ba34c14899a86f2d92af400" name="a9619fc643b442c8942bc63d8ee30021" class="tab" ><label for="a9619fc643b442c8942bc63d8ee30021-35aeed4d1ba34c14899a86f2d92af400" >Android</label>
-<input type="radio" id="a9619fc643b442c8942bc63d8ee30021-757698c93986490ebf9e4b9478ac9d13" name="a9619fc643b442c8942bc63d8ee30021" class="tab" ><label for="a9619fc643b442c8942bc63d8ee30021-757698c93986490ebf9e4b9478ac9d13" >iOS</label>
+<input type="radio" id="487bb673678044aeba566fd6e9cd8746-1de3b54c08354d2d8cba7f3b14c44c1a" name="487bb673678044aeba566fd6e9cd8746" class="tab" checked><label for="487bb673678044aeba566fd6e9cd8746-1de3b54c08354d2d8cba7f3b14c44c1a" >General</label>
+<input type="radio" id="487bb673678044aeba566fd6e9cd8746-6e9112be8c724340b19504544c77f6dd" name="487bb673678044aeba566fd6e9cd8746" class="tab" ><label for="487bb673678044aeba566fd6e9cd8746-6e9112be8c724340b19504544c77f6dd" >Startup</label>
+<input type="radio" id="487bb673678044aeba566fd6e9cd8746-747cab025f2649519d3d680d73de3067" name="487bb673678044aeba566fd6e9cd8746" class="tab" ><label for="487bb673678044aeba566fd6e9cd8746-747cab025f2649519d3d680d73de3067" >Android</label>
+<input type="radio" id="487bb673678044aeba566fd6e9cd8746-d3b38273b90140148f8fc69d08ea8604" name="487bb673678044aeba566fd6e9cd8746" class="tab" ><label for="487bb673678044aeba566fd6e9cd8746-d3b38273b90140148f8fc69d08ea8604" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
