--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,13 +356,16 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="f8d2090bfa634de586d60b33ac667146-bb520667c6ab42499c0828e64a673a60" name="f8d2090bfa634de586d60b33ac667146" class="tab" checked><label for="f8d2090bfa634de586d60b33ac667146-bb520667c6ab42499c0828e64a673a60" >General</label>
-<input type="radio" id="f8d2090bfa634de586d60b33ac667146-4db323b6f75440dc8a2d2c4bbe8e53b3" name="f8d2090bfa634de586d60b33ac667146" class="tab" ><label for="f8d2090bfa634de586d60b33ac667146-4db323b6f75440dc8a2d2c4bbe8e53b3" >Startup</label>
-<input type="radio" id="f8d2090bfa634de586d60b33ac667146-c593c66747fa4eb5b05636b9f070bd65" name="f8d2090bfa634de586d60b33ac667146" class="tab" ><label for="f8d2090bfa634de586d60b33ac667146-c593c66747fa4eb5b05636b9f070bd65" >Android</label>
+<input type="radio" id="eb6cb91dcac44f5d96810ca9bab04515-444b1f9b1e3f4187861fe4cdfc9e1142" name="eb6cb91dcac44f5d96810ca9bab04515" class="tab" checked><label for="eb6cb91dcac44f5d96810ca9bab04515-444b1f9b1e3f4187861fe4cdfc9e1142" >General</label>
+<input type="radio" id="eb6cb91dcac44f5d96810ca9bab04515-fb69ca6645364dfcac1614ee7a9d7b5c" name="eb6cb91dcac44f5d96810ca9bab04515" class="tab" ><label for="eb6cb91dcac44f5d96810ca9bab04515-fb69ca6645364dfcac1614ee7a9d7b5c" >Startup</label>
+<input type="radio" id="eb6cb91dcac44f5d96810ca9bab04515-e0bd08f7cadb4ab69915bfb91611edc7" name="eb6cb91dcac44f5d96810ca9bab04515" class="tab" ><label for="eb6cb91dcac44f5d96810ca9bab04515-e0bd08f7cadb4ab69915bfb91611edc7" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
