--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,6 +356,9 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
@@ -344,11 +369,11 @@
 <img src="images/uwp_runtime_proj.png" width="550" />
 <ol start="2">
 <li>Add <div class="tab-wrap">
-<input type="radio" id="ade0a1892585486faf5e1eb92644773c-6265cb84928249ffa9d453f481ef7983" name="ade0a1892585486faf5e1eb92644773c" class="tab" checked><label for="ade0a1892585486faf5e1eb92644773c-6265cb84928249ffa9d453f481ef7983" >General</label>
-<input type="radio" id="ade0a1892585486faf5e1eb92644773c-d7274e8db5134f29bcb3cfb1f9a762b6" name="ade0a1892585486faf5e1eb92644773c" class="tab" ><label for="ade0a1892585486faf5e1eb92644773c-d7274e8db5134f29bcb3cfb1f9a762b6" >Startup</label>
-<input type="radio" id="ade0a1892585486faf5e1eb92644773c-1cc56f321b6d48a7bf88d70af3ed404d" name="ade0a1892585486faf5e1eb92644773c" class="tab" ><label for="ade0a1892585486faf5e1eb92644773c-1cc56f321b6d48a7bf88d70af3ed404d" >Android</label>
-<input type="radio" id="ade0a1892585486faf5e1eb92644773c-be8da7262c564dd792ec18ffd954c6af" name="ade0a1892585486faf5e1eb92644773c" class="tab" ><label for="ade0a1892585486faf5e1eb92644773c-be8da7262c564dd792ec18ffd954c6af" >iOS</label>
-<input type="radio" id="ade0a1892585486faf5e1eb92644773c-9f3ac397f3bb4d9883ef446805413f82" name="ade0a1892585486faf5e1eb92644773c" class="tab" ><label for="ade0a1892585486faf5e1eb92644773c-9f3ac397f3bb4d9883ef446805413f82" >Windows</label></li>
+<input type="radio" id="406d0738ce684a2692a51cbc984c9551-d0841300076d471b924dd6cd424ae79e" name="406d0738ce684a2692a51cbc984c9551" class="tab" checked><label for="406d0738ce684a2692a51cbc984c9551-d0841300076d471b924dd6cd424ae79e" >General</label>
+<input type="radio" id="406d0738ce684a2692a51cbc984c9551-0280adb3edaa47f9a44d7036d6103b12" name="406d0738ce684a2692a51cbc984c9551" class="tab" ><label for="406d0738ce684a2692a51cbc984c9551-0280adb3edaa47f9a44d7036d6103b12" >Startup</label>
+<input type="radio" id="406d0738ce684a2692a51cbc984c9551-5e996548098e46c188ab064c9f161e59" name="406d0738ce684a2692a51cbc984c9551" class="tab" ><label for="406d0738ce684a2692a51cbc984c9551-5e996548098e46c188ab064c9f161e59" >Android</label>
+<input type="radio" id="406d0738ce684a2692a51cbc984c9551-4c1be214d1c34101b62578d5dfd4454c" name="406d0738ce684a2692a51cbc984c9551" class="tab" ><label for="406d0738ce684a2692a51cbc984c9551-4c1be214d1c34101b62578d5dfd4454c" >iOS</label>
+<input type="radio" id="406d0738ce684a2692a51cbc984c9551-2f5005cba6114b48ad665beef3fae014" name="406d0738ce684a2692a51cbc984c9551" class="tab" ><label for="406d0738ce684a2692a51cbc984c9551-2f5005cba6114b48ad665beef3fae014" >Windows</label></li>
 </ol>
 <div class="tab__content">
 <p>|Area|Info|
