--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,15 +356,18 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="1fbc3b2e82aa444fac372a871866dddc-c754e4d84ad14726b4bb67771eb2d36b" name="1fbc3b2e82aa444fac372a871866dddc" class="tab" checked><label for="1fbc3b2e82aa444fac372a871866dddc-c754e4d84ad14726b4bb67771eb2d36b" >General</label>
-<input type="radio" id="1fbc3b2e82aa444fac372a871866dddc-09af1a14387549f5943f56f5117b3809" name="1fbc3b2e82aa444fac372a871866dddc" class="tab" ><label for="1fbc3b2e82aa444fac372a871866dddc-09af1a14387549f5943f56f5117b3809" >Startup</label>
-<input type="radio" id="1fbc3b2e82aa444fac372a871866dddc-df0c36b30aa5438687e14e6d256ebe1a" name="1fbc3b2e82aa444fac372a871866dddc" class="tab" ><label for="1fbc3b2e82aa444fac372a871866dddc-df0c36b30aa5438687e14e6d256ebe1a" >Android</label>
-<input type="radio" id="1fbc3b2e82aa444fac372a871866dddc-1b5265dd9d17476daa390a46b185f02e" name="1fbc3b2e82aa444fac372a871866dddc" class="tab" ><label for="1fbc3b2e82aa444fac372a871866dddc-1b5265dd9d17476daa390a46b185f02e" >iOS</label>
+<input type="radio" id="f2370ea67732444e8d047debfa12ad9a-c7c19ef8172b4e5c92adbfe218f16191" name="f2370ea67732444e8d047debfa12ad9a" class="tab" checked><label for="f2370ea67732444e8d047debfa12ad9a-c7c19ef8172b4e5c92adbfe218f16191" >General</label>
+<input type="radio" id="f2370ea67732444e8d047debfa12ad9a-66234cc5d67b4f9595d612761d6e96e8" name="f2370ea67732444e8d047debfa12ad9a" class="tab" ><label for="f2370ea67732444e8d047debfa12ad9a-66234cc5d67b4f9595d612761d6e96e8" >Startup</label>
+<input type="radio" id="f2370ea67732444e8d047debfa12ad9a-040e14ddb5e14567b7b8e36c2ee79938" name="f2370ea67732444e8d047debfa12ad9a" class="tab" ><label for="f2370ea67732444e8d047debfa12ad9a-040e14ddb5e14567b7b8e36c2ee79938" >Android</label>
+<input type="radio" id="f2370ea67732444e8d047debfa12ad9a-cd3ff71606d94aaabbf8de21495fce3d" name="f2370ea67732444e8d047debfa12ad9a" class="tab" ><label for="f2370ea67732444e8d047debfa12ad9a-cd3ff71606d94aaabbf8de21495fce3d" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
