--- a/framework/gettingstarted.html
+++ b/framework/gettingstarted.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - Location Sync</title>
+    <title>Shiny.NET - Getting Started</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">Location Sync</div>
+                                <div class="text-white m-0 title">Getting Started</div>
                             </div>
                         </div>
                     </div>
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children active">
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -299,7 +324,7 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/appservices">App Services</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
+                                                <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/appservices/calldirectory">Call Directory</a>
                                                         </div>
@@ -311,9 +336,6 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/appservices/gpstags">GPS Tags</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/appservices/locsync">Location Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
@@ -334,55 +356,86 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <pre><code class="language-cs">using System;
-using Microsoft.Extensions.DependencyInjection;
+                                    <blockquote>
+<p>Shiny Framework brings together Prism, Reactive UI, and Shiny with a bunch of best practices</p>
+</blockquote>
+<ol>
+<li>Install <a href="https://www.nuget.org/packages/Shiny.Framework/" target="Shiny.Framework"><img src="https://img.shields.io/nuget/v/Shiny.Framework.svg?style=for-the-badge" /></a></li>
+<li>Change your App.xaml to the following</li>
+</ol>
+<pre><code class="language-xml">&lt;shiny:FrameworkApplication xmlns=&quot;http://xamarin.com/schemas/2014/forms&quot;
+                            xmlns:x=&quot;http://schemas.microsoft.com/winfx/2009/xaml&quot;
+                            xmlns:shiny=&quot;http://shinylib.net&quot;
+                            x:Class=&quot;YourNamespace.YourApp&quot;&gt;
+    &lt;!--you can include any of your resources here if you want--&gt;
+&lt;/shiny:FrameworkApplication&gt;
+</code></pre>
+<ol start="3">
+<li>Change your App.xaml.cs to use the following:</li>
+</ol>
+<pre><code class="language-csharp">        
 using Shiny;
+using Xamarin.Forms;
+using Xamarin.Forms.Xaml;
 
-public class LocationSyncStartup : ShinyStartup
+namespace YourNamespace
 {
-    public override void ConfigureServices(IServiceCollection services)
+    public partial class YourApp : FrameworkApplication
     {
-        //services.UseGps&lt;&gt;();
-        //services.UseGeofencingSync&lt;&gt;();
-    }
-}
-
-</code></pre>
-<pre><code class="language-cs">using System;
-using System.Collections.Generic;
-using System.Threading;
-using System.Threading.Tasks;
-using Shiny.Locations.Sync;
-
-public class LocationSyncGeofenceDelegate : IGeofenceSyncDelegate
-{
-    public Task Process(IEnumerable&lt;GeofenceEvent&gt; geofence, CancellationToken cancelToken)
-    {
-        throw new NotImplementedException();
+        // you only need this if you have anything in your application resources
+        protected override void Initialize()
+        {
+            this.InitializeComponent();
+            base.Initialize();
+        }
     }
 }
 </code></pre>
-<pre><code class="language-cs">using System;
-using System.Collections.Generic;
-using System.Threading;
-using System.Threading.Tasks;
-using Shiny.Locations.Sync;
+<ol start="4">
+<li>Create a startup file and inherit the following:</li>
+</ol>
+<pre><code class="language-csharp">using System.Threading.Tasks;
+using Microsoft.Extensions.DependencyInjection;
+using Microsoft.Extensions.Logging;
+using Prism.Ioc;
+using Prism.Navigation;
 
-public class LocationSyncGpsDelegate : IGpsSyncDelegate
+namespace YourNamespace
 {
-    public Task Process(IEnumerable&lt;GpsEvent&gt; gpsEvent, CancellationToken cancelToken)
+    public class YourStartup : Shiny.FrameworkStartup
     {
-        throw new NotImplementedException();
+        public override void ConfigureApp(IContainerRegistry containerRegistry)
+        {
+            // configure all of your Prism navigation and foreground only services here!
+        }
+
+
+        public override Task RunApp(INavigationService navigator)
+        {
+            // use the navigator to go to your starting page
+        }
+
+
+        protected override void Configure(ILoggingBuilder builder, IServiceCollection services)
+        {
+            // register all of your Shiny services and background infrastructure here
+        }
     }
 }
 </code></pre>
+<ol start="5">
+<li>With the above startup file, initialize Shiny just like normal (NOTE: on iOS, make sure Shiny is initialized before any Xamarin Forms call!!!)</li>
+</ol>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/appservices/locsync.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/framework/gettingstarted.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
