--- a/framework/viewmodel.html
+++ b/framework/viewmodel.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - Platform - iOS</title>
+    <title>Shiny.NET - ViewModels</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">Platform - iOS</div>
+                                <div class="text-white m-0 title">ViewModels</div>
                             </div>
                         </div>
                     </div>
@@ -81,11 +81,11 @@
 <a href="/quickstart">Quick Start</a>                                            </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/setup">Setup</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
+                                                <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child active">
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -208,11 +208,11 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/framework">Framework</a>                                            </div>
-                                                <div class="sidebar-nav-children">
+                                                <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/framework/gettingstarted">Getting Started</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child">
+                                                        <div class="sidebar-nav-child active">
                                                             <a href="/framework/viewmodel">ViewModels</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -362,137 +362,11 @@
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <h1 id="ios">iOS</h1>
-<h2 id="appdelegate">AppDelegate</h2>
-<table>
-<thead>
-<tr>
-<th>Method</th>
-<th>Shiny Wire-In</th>
-<th>Purpose</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>ReceivedRemoteNotification</td>
-<td>ShinyDidReceiveRemoteNotification</td>
-<td>Used by Shiny.Push and some app services</td>
-</tr>
-<tr>
-<td>DidReceiveRemoteNotification</td>
-<td>ShinyDidReceiveRemoteNotification</td>
-<td>Used by Shiny.Push and some app services</td>
-</tr>
-<tr>
-<td>RegisteredForRemoteNotifications</td>
-<td>ShinyRegisteredForRemoteNotifications</td>
-<td>Used by Shiny.Push and some app services</td>
-</tr>
-<tr>
-<td>FailedToRegisterForRemoteNotifications</td>
-<td>ShinyFailedToRegisterForRemoteNotifications</td>
-<td>Used by Shiny.Push and some app services</td>
-</tr>
-<tr>
-<td>PerformFetch</td>
-<td>ShinyPerformFetch</td>
-<td>Used by Shiny Core mostly for jobs, but there are lots of places in Shiny where Jobs are used</td>
-</tr>
-<tr>
-<td>HandleEventsForBackgroundUrl</td>
-<td>ShinyHandleEventsForBackgroundUrl</td>
-<td>Used by Shiny.Net.Http for background transfers</td>
-</tr>
-</tbody>
-</table>
-<p>This is a fully &quot;hooked&quot; appdelegate to</p>
-<pre><code class="language-csharp">using System;
-using Shiny;
-using Foundation;
-using UIKit;
-
-public partial class AppDelegate
-{
-    // special method called by shiny if exists
-    partial void OnPreFinishedLaunching(UIApplication app, NSDictionary options);
-
-    // special method called by shiny if exists
-    partial void OnPostFinishedLaunching(UIApplication app, NSDictionary options);
-
-
-    public override bool FinishedLaunching(UIApplication app, NSDictionary options)
-    {
-        this.OnPreFinishedLaunching(app, options);
-        this.ShinyFinishedLaunching(new Samples.SampleStartup());
-        this.LoadApplication(new Samples.App());        
-        global::Xamarin.Forms.Forms.Init();
-        
-        global::XF.Material.iOS.Material.Init();
-        this.OnPostFinishedLaunching(app, options);
-        return base.FinishedLaunching(app, options);
-    }
-
-
-    /*
-    THESE METHODS ARE ONLY NEEDED IF A PUSH PACKAGE IS USED
-    */
-    public override void RegisteredForRemoteNotifications(UIApplication application, NSData deviceToken) 
-        =&gt; this.ShinyRegisteredForRemoteNotifications(deviceToken);
-
-    public override void FailedToRegisterForRemoteNotifications(UIApplication application, NSError error) 
-        =&gt; this.ShinyFailedToRegisterForRemoteNotifications(error);
-
-    public override void DidReceiveRemoteNotification(UIApplication application, NSDictionary userInfo, Action&lt;UIBackgroundFetchResult&gt; completionHandler) 
-        =&gt; this.ShinyDidReceiveRemoteNotification(userInfo, completionHandler);
-
-    /*
-    THIS METHOD IS NEEDED BY MOST OF SHINY - ALWAYS ADD IT
-    */
-    public override void PerformFetch(UIApplication application, Action&lt;UIBackgroundFetchResult&gt; completionHandler) 
-        =&gt; this.ShinyPerformFetch(completionHandler);
-
-    /*
-    THIS METHOD IS NEEEDED IF YOU ARE USING SHINY.NET.HTTP
-    */
-    public override void HandleEventsForBackgroundUrl(UIApplication application, string sessionIdentifier, Action completionHandler) 
-        =&gt; this.ShinyHandleEventsForBackgroundUrl(sessionIdentifier, completionHandler);
-}
-</code></pre>
-<h3 id="info.plist">Info.plist</h3>
-<pre><code class="language-xml">&lt;!-- required for location and beacons --&gt;
-&lt;key&gt;NSLocationAlwaysUsageDescription&lt;/key&gt;
-&lt;string&gt;The beacons or geofences or GPS always have you!&lt;/string&gt;
-&lt;key&gt;NSLocationAlwaysAndWhenInUseUsageDescription&lt;/key&gt;
-&lt;string&gt;The beacons or geofences or GPS always have you!&lt;/string&gt;
-&lt;key&gt;NSLocationWhenInUseUsageDescription&lt;/key&gt;
-&lt;string&gt;The beacons or geofences or GPS always have you!&lt;/string&gt;
-
-&lt;key&gt;NSMotionUsageDescription&lt;/key&gt;
-&lt;string&gt;Say something clever here&lt;/string&gt;
-
-&lt;key&gt;UIBackgroundModes&lt;/key&gt;
-&lt;array&gt;
-    &lt;string&gt;location&lt;/string&gt;
-    &lt;string&gt;fetch&lt;/string&gt;
-    &lt;string&gt;processing&lt;/string&gt;
-&lt;/array&gt;
-
-&lt;key&gt;BGTaskSchedulerPermittedIdentifiers&lt;/key&gt;
-&lt;array&gt;
-    &lt;string&gt;com.shiny.job&lt;/string&gt;
-    &lt;string&gt;com.shiny.jobpower&lt;/string&gt;
-    &lt;string&gt;com.shiny.jobnet&lt;/string&gt;
-    &lt;string&gt;com.shiny.jobpowernet&lt;/string&gt;
-&lt;/array&gt;
-</code></pre>
+                                    <p>TODO</p>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                        <div class="border-bottom mb-3">
-                                            <p class="small font-weight-bold">On This Page</p>
-                                                <p class="small"><a href="#ios">iOS</a></p>
-                                        </div>
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/setup/ios.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/framework/viewmodel.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
