--- a/locations/gps.html
+++ b/locations/gps.html
@@ -207,6 +207,31 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/framework">Framework</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/gettingstarted">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/viewmodel">ViewModels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/exceptions">Global Command Exception Handler</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/dialogs">Dialogs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/localization">Localization</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/extensions">Extensions</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/framework/msal">Microsoft Authentication Library (MSAL)</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/httptransfers">HTTP Transfers</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -313,9 +338,6 @@
                                                             <a href="/appservices/gpstags">GPS Tags</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/appservices/locsync">Location Sync</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/appservices/mediasync">Media Sync</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -334,16 +356,19 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v220">v2.2.0 (June 14, 2021)</a>
+                                                        </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="6398f9589f1642ed84c971796983b226-f9d3a7b934f44fd9869631c6b226bd67" name="6398f9589f1642ed84c971796983b226" class="tab" checked><label for="6398f9589f1642ed84c971796983b226-f9d3a7b934f44fd9869631c6b226bd67" >General</label>
-<input type="radio" id="6398f9589f1642ed84c971796983b226-813c1ac8c6024a0084b66257a1bc6426" name="6398f9589f1642ed84c971796983b226" class="tab" ><label for="6398f9589f1642ed84c971796983b226-813c1ac8c6024a0084b66257a1bc6426" >Startup</label>
-<input type="radio" id="6398f9589f1642ed84c971796983b226-fb99113486a441d4b95c0bd76704a806" name="6398f9589f1642ed84c971796983b226" class="tab" ><label for="6398f9589f1642ed84c971796983b226-fb99113486a441d4b95c0bd76704a806" >Android</label>
-<input type="radio" id="6398f9589f1642ed84c971796983b226-69e2dc75a4ef4e4b80d139837f23307a" name="6398f9589f1642ed84c971796983b226" class="tab" ><label for="6398f9589f1642ed84c971796983b226-69e2dc75a4ef4e4b80d139837f23307a" >iOS</label>
-<input type="radio" id="6398f9589f1642ed84c971796983b226-d7541ebbac6949b79c2751c90bdc7281" name="6398f9589f1642ed84c971796983b226" class="tab" ><label for="6398f9589f1642ed84c971796983b226-d7541ebbac6949b79c2751c90bdc7281" >Windows</label>
+<input type="radio" id="8d9a33819b0d450abf830d4d01f7c7e6-21f51b465bb24cc8aaee9b4eabaaf726" name="8d9a33819b0d450abf830d4d01f7c7e6" class="tab" checked><label for="8d9a33819b0d450abf830d4d01f7c7e6-21f51b465bb24cc8aaee9b4eabaaf726" >General</label>
+<input type="radio" id="8d9a33819b0d450abf830d4d01f7c7e6-1ebff5e1b64a460e86e3bba538e36542" name="8d9a33819b0d450abf830d4d01f7c7e6" class="tab" ><label for="8d9a33819b0d450abf830d4d01f7c7e6-1ebff5e1b64a460e86e3bba538e36542" >Startup</label>
+<input type="radio" id="8d9a33819b0d450abf830d4d01f7c7e6-273a5cea604d4054bcb98867c016c4d4" name="8d9a33819b0d450abf830d4d01f7c7e6" class="tab" ><label for="8d9a33819b0d450abf830d4d01f7c7e6-273a5cea604d4054bcb98867c016c4d4" >Android</label>
+<input type="radio" id="8d9a33819b0d450abf830d4d01f7c7e6-28e245f37457450d9a60c7d9dc63bae5" name="8d9a33819b0d450abf830d4d01f7c7e6" class="tab" ><label for="8d9a33819b0d450abf830d4d01f7c7e6-28e245f37457450d9a60c7d9dc63bae5" >iOS</label>
+<input type="radio" id="8d9a33819b0d450abf830d4d01f7c7e6-64187b8b622b496cb672796c8278fc87" name="8d9a33819b0d450abf830d4d01f7c7e6" class="tab" ><label for="8d9a33819b0d450abf830d4d01f7c7e6-64187b8b622b496cb672796c8278fc87" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
